# VoltQuest

./: .gitignore  ASSET_LICENSE.md  CMakeLists.txt  README.md  output.txt
build-scripts/AppImage/: build.sh  install-deps.sh  package.sh  voltquest-temp.desktop
docs/: dev-guide.md  index.md  level-design-guide.md
include/: input_manager.hpp  level.hpp  level_manager.hpp  path_utils.hpp  screen_manager.h  screen_manager.hpp  settings.h  settings.hpp  ui_manager.h  ui_manager.hpp  ui_utils.hpp  volt_inputs.hpp  window_manager.h  window_manager.hpp
include/game_objects/: movable_object.hpp
include/game_objects/electronic_components/: active_components.hpp  electronics_base.hpp  power_sources.hpp  wire.hpp
include/game_objects/electronic_components/output/: led.hpp
include/game_objects/electronic_components/power/: battery.hpp
include/game_objects/electronic_components/wiring/: wire.hpp
include/simulation/: electronics_simulation.hpp
src/: level.cpp  level_manager.cpp  main.cpp  path_utils.cpp  screen_manager.cpp  settings.cpp  ui_manager.cpp  window_manager.cpp
